--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,10 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <%# @categories.each do |cat| %>
-              <li><%#= link_to cat.name, categorical_path(category_id: cat.id) %></li>
-            <%# end %>
-            <li><%#= link_to 'All', root_path %></li>
+            <% @categories.each do |cat| %>
+              <li><%= link_to cat.name, categorical_path(category_id: cat.id) %></li>
+            <% end %>
+            <li><%= link_to 'All', root_path %></li>
           </ul>
         </li>
         <!-- End Categories -->
@@ -42,17 +42,17 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Brands<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <%# @brands.each do |brand| %>
-              <li><%#= link_to brand, branding_path(brand: brand) %></li>
-            <%# end %>
-            <li><%#= link_to 'All', root_path %></li>
+            <% @brands.each do |brand| %>
+              <li><%= link_to brand, branding_path(brand: brand) %></li>
+            <% end %>
+            <li><%= link_to 'All', root_path %></li>
           </ul>
         </li>
         <!-- End Brands -->
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
-        <li><%#= link_to "View Cart", view_order_path %></li>
+        <li><%= link_to "View Cart", view_order_path %></li>
         <!-- add this code: -->
         <% if user_signed_in? %>
           <li class="dropdown">
