--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,7 +20,7 @@
       <tr>
         <td><%= product.name %></td>
         <td><%= product.brand %></td>
-        <td><%= product.price %></td>
+        <td><%= number_to_currency product.price %></td>
         <td><%= product.quantity %></td>
         <td><%= product.category_id %></td>
         <td><%= product.description %></td>
