--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -25,8 +25,11 @@
         <td><%= product.category_id %></td>
         <td><%= product.description %></td>
         <td><%= link_to 'Show', product %></td>
+        <% if can? :update, Product%>
+
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +37,6 @@
 
 <br>
 
+<% if can? :create, Product %>
 <%= link_to 'New Product', new_product_path %>
+<% end %>
